--- a/templates/audioPlayer.ejs
+++ b/templates/audioPlayer.ejs
@@ -1,5 +1,7 @@
 <li>
     <audio id="audioplayer" controls>
-        <source src="http://podcasts.343max.de/wmr/wmr55.m4a" type="audio/mp4">
+        <source src="http://podcasts.343max.de/wmr/wmr54.m4a" type="audio/m4a">
+        <source src="http://podcasts.343max.de/wmr/wmr54.oga" type="audio/oga">
+        <source src="http://podcasts.343max.de/wmr/wmr54.mp3" type="audio/mpeg">
     </audio>
 </li>
