inserting a timestamp now works too

--- a/templates/timestampButton.ejs
+++ b/templates/timestampButton.ejs
@@ -1,3 +1,9 @@
-<li id="instertTimestamp" onClick="alert('hello!');return false;">
-  <a title="Insert Tirmestamp"><span class="buttonicon buttonicon-insert-timestamp"></span></a>
+<li id="instertTimestamp" onClick="ep_chaptermarks.insertTimestamp(-20);return false;">
+  <a title="Insert Tirmestamp" class="grouped-left"><span class="buttonicon buttonicon-insert-timestamp">-00:05</span></a>
+</li>
+<li id="instertTimestamp" onClick="ep_chaptermarks.insertTimestamp(-5);return false;">
+  <a title="Insert Tirmestamp" class="grouped-middle"><span class="buttonicon buttonicon-insert-timestamp">-00:05</span></a>
+</li>
+<li id="instertTimestamp" onClick="ep_chaptermarks.insertTimestamp(0);return false;">
+  <a title="Insert Tirmestamp" class="grouped-right"><span class="buttonicon buttonicon-insert-timestamp"></span></a>
 </li>
